--- a/CleverEmployee/CleverEmployee/CleverEmployee.vcxproj.filters
+++ b/CleverEmployee/CleverEmployee/CleverEmployee.vcxproj.filters
@@ -51,4 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Korisnici.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
